feature(js & css) txt navBarLeft Create(dossier) styles fix(css) navigate & header feature(dossier) component graph

--- a/src/components/Navigate/style.scss
+++ b/src/components/Navigate/style.scss
@@ -1,20 +1,15 @@
 .containerNav{
     font-size:24px;
     margin-right: 87px;
+    width:100%;
+  }
+  .navigate{
+    width:100%;
+    display: flex;
+    justify-content:space-around;
   }
 .navigate a{
     text-decoration:none;
     color: white;
 }
-.profil{
-   margin-left:204px ; 
-}
 
-.reglages{
-    margin-left:226px ; 
-}
-
-.communaute{
-    margin-left:196px ; 
- }
- 
