--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -5,8 +5,11 @@ header{
      background-color:black;
     height:91px;
 }
+.logoImg{
+    width:178px; 
+}
 .logoImg img{
-    width:178px;
+   
     height:60px;
     margin-left:29px;
     margin-top:19px;
