fix(js & css) AverageSessionGraph add(js&css) profil pages className

--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -1,3 +1,12 @@
 .AverageSession{
     text-align: center;
+    
+}
+.containerTitleGraphRed{
+    position: absolute;
+    width:147px;
+    font-size: 15px;
+    margin-left: 34px;
+    margin-top: 29px;
+    color: white;
 }
