fix(js&css) Intensity graph fix(css) fontsize contBlack

--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -34,6 +34,7 @@ color: #FF0000;
   background-color:#FF0000;
 }
 .containerBlack{
+  font-size: 12px;
   width:263px;
   height:258px;
   background-color:#282D30;
