fix(gitignore)ppt add(img) bodyMass feature(js) function get Daily-intensity-average-name fix(css profil) container body feature(js data) function & datas

--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,5 +1,4 @@
 .containerFirst{
-   
     height:100px;
     margin-left: 109px;
 }
@@ -51,4 +50,13 @@ color: #FF0000;
 .score{
   font-size: 12px;
  
+}
+.containerBody{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  right:90px;
+  top: 354px;
+  height:656px;
 }
