--- a/src/components/BodyMassIndex/style.scss
+++ b/src/components/BodyMassIndex/style.scss
@@ -1,5 +1,7 @@
+@import "../../styles/commun.scss";
+
 .bodyMassIndex{
-    background-color: #FBFBFB;
+    background-color: $colorGreylight;
     width:258px;
     height:128px;
     display: flex;
@@ -7,7 +9,8 @@
     
 }
 .bodyMass{
-       color: black;
+       color: $colorBlack;
+       ;
 }
 .iconeBodyMass{
     margin-left: 32px;
