--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,5 @@ $colorBlack: black;
 $fontSizeContainerLittleGraph: 12px;
 $fontSizeContainerMaxGraph: 15px;
 $fontSizeTitleProfil:48px;
+$widthIconeNavBarLeft:64px;
+$heightIconeNavBarLeft:64px;
