fix(css) header & navigate figma

--- a/src/components/Navigate/style.scss
+++ b/src/components/Navigate/style.scss
@@ -1,8 +1,9 @@
 @import "../../styles/commun.scss";
 .containerNav{
     font-size:24px;
-    margin-right: 87px;
-    width:100%;
+    outline:1px solid green;
+        width:100%;
+        margin-left:159px;
   }
   .navigate{
     width:100%;
