--- a/src/components/Navigate/style.scss
+++ b/src/components/Navigate/style.scss
@@ -1,6 +1,7 @@
 @import "../../styles/commun.scss";
 .containerNav{
     font-size:24px;
+    font-weight: 500;
     outline:1px solid green;
         width:100%;
         margin-left:159px;
