fix(css) profil fix(js) score graph

--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,60 +1,55 @@
-@import '../../styles/commun.scss';
-.containerFirst{
-
-   margin-left: 109px;
+@import "../../styles/commun.scss";
+.containerFirst {
+  margin-left: 109px;
 }
-.titleProfil{
-  outline: 1px solid green;
-    font-weight: 500;
-    font-size:$fontSizeTitleProfil;
-    display: flex;
-    margin-top:68px;
-    line-height:24px;
-
+.titleProfil {
+  font-weight: 500;
+  font-size: $fontSizeTitleProfil;
+  display: flex;
+  margin-top: 68px;
+  line-height: 24px;
 }
-.txtProfil{
+.txtProfil {
   margin-top: 41px;
   display: flex;
   margin-bottom: 77px;
- }
-
-
-.name{
-color: $colorRed;
 }
-.littleGraph{
-  display: flex; 
-   justify-content:space-between;
-  margin-top:90px;
-  width:849px;
 
+.name {
+  color: $colorRed;
 }
-.dailyActivity{
+.littleGraph {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 90px;
+  width: 849px;
+}
+.dailyActivity {
   font-size: $fontSizeContainerMaxGraph;
-  width:849px;
-  height:320px;
-  background-color:$colorGreylight;
+  width: 849px;
+  height: 320px;
+  background-color: $colorGreylight;
 }
-.containerGraph{
+.containerGraph {
   font-size: $fontSizeContainerLittleGraph;
-  width:263px;
-  height:258px;
+  width: 263px;
+  height: 258px;
 }
-.averageSession{
-    background-color:$colorRed;
+.averageSession {
+  background-color: $colorRed;
 }
-.intensity{
-    background-color:$colorGrey;
+.intensity {
+  background-color: $colorGrey;
 }
-.score{
-    background-color:$colorGreylight;
+.score {
+  background-color: $colorGreylight;
 }
-.containerBody{
+.containerBody {
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  right:90px;
+  right: 90px;
   top: 354px;
-  height:656px;
+  height: 656px;
 }
