--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,6 @@ $fontSizeContainerMaxGraph: 15px;
 $fontSizeTitleProfil:48px;
 $widthIconeNavBarLeft:64px;
 $heightIconeNavBarLeft:64px;
+
+$widthgraph:835px;
+$marginLeftGraph:109px;
