fix(css) profil bodymass add(css) breakpoint bodymassCard

--- a/src/components/BodyMassIndex/style.scss
+++ b/src/components/BodyMassIndex/style.scss
@@ -16,3 +16,9 @@
     margin-left: 32px;
     margin-right: 29px;
 }
+@media #{$medium-down} {
+
+    .bodyMassIndex{
+        width:200px;
+       
+}}
