fix(js &css) var communs-profil BodyMass vs figma-refacto component BodyMass

--- a/src/components/BodyMassIndex/style.scss
+++ b/src/components/BodyMassIndex/style.scss
@@ -2,7 +2,7 @@
 
 .bodyMassIndex{
     background-color: $colorGreylight;
-    width:258px;
+    width:$widthBodyMass;
     height:128px;
     display: flex;
     align-items: center;
