fix(css) nav-body,profil-routes vs figma

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,6 @@ $widthIconeNavBarLeft:64px;
 $heightIconeNavBarLeft:64px;
 
 $widthgraph:835px;
-$marginLeftGraph:109px;
-
+$marginLeftProfilGraph:109px;
+$marginLeftProfilGraphMobile: 30px;
 $widthBodyMass:258px;
