--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -6,12 +6,14 @@ width:176px;
 margin-left:29px;
 }
 header{ 
+    //outline: 10px solid green;
+    width:100%;
     height:72px;
     background-color:$colorBlack;
     display:flex;
     align-items:center;
     justify-content:space-around;
     padding-top:19px;
-   padding-right: 87px;
+ 
    
 }
