--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,6 +1,6 @@
 @import "../../styles/commun.scss";
 .containerGraph{
-  margin-left:$marginLeftGraph;
+  margin-left:$marginLeftProfilGraph;
 }
 .titleProfil {
   font-weight: 500;
@@ -18,10 +18,13 @@
   display: flex;
   margin-bottom: 77px;
 }
-.containerBigGraph{
-  display: block;
+.containerSectionOneBigGraph{
+  width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content:space-between;
   outline: 1px green solid;
-  position: relative;
+position:relative;
   
 }
  .containerLittleGraph {
@@ -30,8 +33,8 @@
 border-radius: 5px;
 
  }
-.littleGraph{
-  margin-top: 28px;
+.containerSectionTwoLittleGraph{
+  margin-top: -258px;
   width: $widthgraph;
   font-size: $fontSizeContainerLittleGraph;
   display: flex;
@@ -39,8 +42,9 @@ border-radius: 5px;
  }
   
 .dailyActivity {
+  outline: 1px green solid;
    font-size: $fontSizeContainerMaxGraph;
-  width: $widthgraph;
+  width: 100%;
   height: 321px;
   background-color: $colorGreylight;
 }
@@ -58,24 +62,31 @@ border-radius: 5px;
 
 .containerBodyMass {
   outline: 1px green solid;
- position: absolute;
- display: flex;
+  display: flex;
  flex-direction: column;
  justify-content: space-between;
  right: 90px;
  top: 320px;
  height: 620px;
+ margin-left:30px;
+
 }
 @media #{$medium-down} {
-  .containerBodyMass {
-  
-   flex-direction: row;
-     right: 0px;
-    top: 1000px;
-  width:100%;
-    height: auto;
-  }
   .containerGraph{
-    margin-left:10px;
+    margin-left:$marginLeftProfilGraphMobile;
   }
+  .containerSectionOneBigGraph{
+ 
+display: block;
+  }
+  .containerBodyMass {
+   height:auto;
+    margin-top: 20px;
+    margin-left:0px;
+    flex-direction: row;
+  }
+    .containerSectionTwoLittleGraph{
+      margin-top: 20px;
+    
+     }
 }
