--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $widthIconeNavBarLeft:64px;
 $heightIconeNavBarLeft:64px;
 
 $widthgraph:835px;
+$widthgraphMobile:600px;
 $marginLeftProfilGraph:109px;
 $marginLeftProfilGraphMobile: 30px;
 $widthBodyMass:258px;
