--- a/src/components/CardNavBarLeft/style.scss
+++ b/src/components/CardNavBarLeft/style.scss
@@ -1,17 +1,18 @@
 @import "../../styles/commun.scss";
-.containerIcones {
+.containerIcones{
+  // outline: 2px solid yellow ;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content:center;
+  
 }
-.layoutIcone {
-  //outline: 3px solid rgb(128, 0, 0);
-  background: $colorWhite;
-  border-radius: 6px;
-  margin-bottom: 20px;
-  width: $widthIconeNavBarLeft;
-  height: $heightIconeNavBarLeft;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.layoutIcone nav{
+ //  outline: 2px solid green;
+   background-color:white;
+   width:64px;
+   height:64px;
+   border-radius: 6px;
+   display: flex;
+   align-items:center;
+   justify-content:center;
+   margin-bottom:20px;
 }
