--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,94 +1,116 @@
 @import "../../styles/commun.scss";
-.containerProfil{
-  margin-left:$marginLeftProfilGraph;
+// .containerProfil{
+//   margin-left:$marginLeftProfilGraph;
+// }
+// .nameProfil{
+//   color:$colorRed;
+// }
+// .titleProfil {
+//   font-weight: 500;
+//   font-size: $fontSizeTitleProfil;
+//   display: flex;
+//   margin-top: 68px;
+//   margin-left:-4px;
+//   line-height: 24px;
+//   }
+// .containerGraphUser{
+//   display: flex;
+// flex-wrap: wrap;
+// }
+// .txtProfil {
+//   margin-top: 41px;
+//   display: flex;
+//   margin-bottom: 77px;
+// }
+// .containerGraph{
+//     display: flex;
+//   flex-direction: column;
+//   width: $widthgraph;
+//   outline: 1px yellow solid;
+//  }
+//  .averageSession, .intensity, .score{
+//   width: 263px;
+//   height: 258px;
+// border-radius: 5px;
+//  }
+  
+// .dailyActivity {
+//   outline: 1px green solid;
+//    font-size: $fontSizeContainerMaxGraph;
+//   width: $widthgraph;
+//   height: 321px;
+//   background-color: $colorGreylight;
+// }
+// .containerLittleGraphs{
+//   display: flex;
+//   justify-content: space-between;
+//   flex-wrap: wrap;
+//   margin-top:30px;
+// }
+// .averageSession {
+//   background-color: $colorRed;
+  
+// }
+// .intensity {
+//   background-color: $colorGrey;
+// }
+// .score {
+//   background-color: $colorGreylight;
+// }
+
+// .containerBodyMass {
+//   outline: 1px green solid;
+//   display: flex;
+//  flex-direction: column;
+//  justify-content: space-between;
+//  flex-wrap: wrap;
+//  right: 90px;
+//  top: 320px;
+//  height: 620px;
+//  margin-left:30px;
+// }
+
+// @media #{$medium-down} {
+//  .containerProfil{
+//   margin-left:30px;
+// }
+// .dailyActivity, .containerGraph {
+//   width: $widthgraphMobile;
+
+// }
+// .score {
+// margin-top: 50px;
+// }
+// .containerBodyMass {
+//   outline: 1px green solid;
+//   margin-top:30px;
+//  flex-direction: row;
+//  justify-content: space-between;
+//  right: 0px;
+//   height:auto;
+//  margin-left:0px;
+//  max-width: 600px;
+// }
+// }
+
+
+.containerProfil {
+  //  outline: 1px solid green;
+  position: absolute;
+  margin-left: 225px;
+  top: 159px;
 }
-.nameProfil{
-  color:$colorRed;
-}
+
 .titleProfil {
+  // outline: 1px solid rgb(167, 167, 21);
+  font-size: 48px;
   font-weight: 500;
-  font-size: $fontSizeTitleProfil;
   display: flex;
-  margin-top: 68px;
-  margin-left:-4px;
-  line-height: 24px;
-  }
-.containerGraphUser{
-  display: flex;
-flex-wrap: wrap;
 }
-.txtProfil {
-  margin-top: 41px;
-  display: flex;
-  margin-bottom: 77px;
+.nameProfil {
+  color: red;
 }
-.containerGraph{
-    display: flex;
-  flex-direction: column;
-  width: $widthgraph;
-  outline: 1px yellow solid;
- }
- .averageSession, .intensity, .score{
-  width: 263px;
-  height: 258px;
-border-radius: 5px;
- }
-  
-.dailyActivity {
-  outline: 1px green solid;
-   font-size: $fontSizeContainerMaxGraph;
-  width: $widthgraph;
-  height: 321px;
-  background-color: $colorGreylight;
-}
-.containerLittleGraphs{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-top:30px;
-}
-.averageSession {
-  background-color: $colorRed;
-  
-}
-.intensity {
-  background-color: $colorGrey;
-}
-.score {
-  background-color: $colorGreylight;
-}
-
-.containerBodyMass {
-  outline: 1px green solid;
-  display: flex;
- flex-direction: column;
- justify-content: space-between;
- flex-wrap: wrap;
- right: 90px;
- top: 320px;
- height: 620px;
- margin-left:30px;
-}
-
-@media #{$medium-down} {
- .containerProfil{
-  margin-left:30px;
-}
-.dailyActivity, .containerGraph {
-  width: $widthgraphMobile;
-
-}
-.score {
-margin-top: 50px;
-}
-.containerBodyMass {
-  outline: 1px green solid;
-  margin-top:30px;
- flex-direction: row;
- justify-content: space-between;
- right: 0px;
-  height:auto;
- margin-left:0px;
- max-width: 600px;
-}
+.txtProfil{
+    margin-top:41px;
+    margin-bottom:77px;
 }
