--- a/src/components/BodyMassIndex/style.scss
+++ b/src/components/BodyMassIndex/style.scss
@@ -1,28 +1,22 @@
 @import "../../styles/commun.scss";
 
-.bodyMassIndex{
-    background-color: $colorGreylight;
-   width:$widthBodyMass;
-    height:128px;
+.layoutcardBodyMass{
+    //outline:2px solid green;
     display: flex;
     align-items: center;
-    
+    width:258px;
+    height:124px;
+    background: #FBFBFB;
+    border-radius: 5px;
+
 }
 .bodyMass{
-       color: $colorBlack;
-   font-size: 20px;
-}
-.iconeBodyMass{
-    margin-left: 32px;
-    margin-right: 29px;
+    font-size:20px;
 }
 .typeBodyMass{
     font-size:14px;
-    
 }
-@media #{$medium-down} {
-
-    .bodyMassIndex{
-        width:220px;
-       
-}}
+.iconeBodyMass{
+margin-left: 32px;
+margin-right:24px;
+}
