fix(css) containerGraphUser profil

--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -94,7 +94,10 @@
 // }
 
 @import "../../styles/commun.scss";
-
+.containerGraphUser{
+  display:flex;
+  flex-wrap: wrap;
+  }
 .containerProfil {
   //  outline: 1px solid green;
   position: absolute;
