fix(css) profil bodyMass

--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -136,10 +136,18 @@
 }
 .score{
   background-color: #FBFBFB;
+}.containerBodyMass{
+  outline: 2px solid green;
+ margin-left: 24px;
 }
-
 @media #{$medium-down} {
   .containerProfil {
   margin-left: 145px;
+  }
+  .containerBodyMass{
+    outline: 2px solid green;
+   display:flex;
+    justify-content:space-between;
+    margin-left:0;
   }
 }
