fix(css) bodyMass mobile

--- a/src/components/BodyMassIndex/style.scss
+++ b/src/components/BodyMassIndex/style.scss
@@ -1,5 +1,4 @@
 @import "../../styles/commun.scss";
-
 .layoutcardBodyMass{
     //outline:2px solid green;
     display: flex;
@@ -20,3 +19,10 @@
 margin-left: 32px;
 margin-right:24px;
 }
+@media #{$large-down} {
+    .layoutcardBodyMass{
+        margin-right: 3px;
+        width:207px;
+        height:108px;
+    }
+    }
