--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -1,14 +1,20 @@
 @import "../../styles/commun.scss";
-
-.AverageSession{
-    text-align: center;
-    
+.containerAverageSession{
+    background: #FF0000;
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
+border-radius: 5px;
+width:258px ;
+height:263px;
+font-size: 12px;
+//opacity: 0.6;
 }
 .containerTitleGraphRed{
-    position: absolute;
+    font-size: 15px;
+    color: #FFFFFF;
+    //opacity: 0.5;
     width:147px;
-    font-size: $fontSizeContainerMaxGraph;
-    margin-left: 34px;
-    margin-top: 29px;
-    color: $colorWhite;
+    height:48px;
+    position: absolute;
+   margin-top:29px;
+   margin-left:34px;
 }
