fix(js & css) tooltip daily activity

--- a/src/components/DailyActivity/style.scss
+++ b/src/components/DailyActivity/style.scss
@@ -20,3 +20,13 @@
      
     
     }
+
+    .custom-tooltip{
+        background-color:red;color:white;
+        width:39px;
+        height:63px;
+        font-size:7px;
+        margin-top:4px;
+        text-align:center;
+        align-items:center;
+    }
