fix(css & js) tooltipDailyActivity feature(js & css) tooltipAverage

--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -18,3 +18,10 @@ font-size: 12px;
    margin-top:29px;
    margin-left:34px;
 }
+.custom-tooltipAverage{
+background-color: white;
+width: 39px;
+height:25px;
+font-size:8px;
+display: flex;justify-content: center;
+text-align: center;}
