fix(js & css) score fix(js) utils getDataScore add %

--- a/src/components/score/style.scss
+++ b/src/components/score/style.scss
@@ -1,4 +1,18 @@
 .Score{
     text-align: center;
-    
+}
+.titleScore{
+    margin-top:24px;
+    margin-left: 30px;
+    font-size:15px;
+    font-weight: 500;
+}
+.txtObjectif{
+   
+color:rgba(116, 121, 140, 1)
+}
+
+.graphScore{
+    font-size:26px;
+    font-weight: 700;
 }
