--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -137,7 +137,7 @@
 .score{
   background-color: #FBFBFB;
 }.containerBodyMass{
-  outline: 2px solid green;
+  //   outline: 2px solid green;
   display:flex;
   flex-direction: column;
   justify-content:space-between;
