--- a/src/components/score/style.scss
+++ b/src/components/score/style.scss
@@ -2,17 +2,24 @@
     text-align: center;
 }
 .titleScore{
-    margin-top:24px;
-    margin-left: 30px;
+   // outline:1px solid blue;
+    position: relative;
+    width: 50px;
+    top: 24px;
+    left: 30px;
     font-size:15px;
     font-weight: 500;
 }
 .txtObjectif{
-   
 color:rgba(116, 121, 140, 1)
 }
 
 .graphScore{
     font-size:26px;
     font-weight: 700;
+}
+.layoutScore{
+  //  outline:1px solid green;
+   width: 258px;
+  height:263px;
 }
