--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -11,7 +11,7 @@
 }
 
 .titleProfil {
-  // outline: 1px solid rgb(167, 167, 21);
+  outline: 1px solid rgb(167, 167, 21);
   font-size: 48px;
   font-weight: 500;
   display: flex;
