--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,17 +1,14 @@
 @import "../../styles/commun.scss";
-.containerGraphUser{
-  display:flex;
-  flex-wrap: wrap;
-  }
+
 .containerProfil {
-  //  outline: 1px solid green;
+   outline: 1px solid green;
   position: absolute;
   margin-left: 225px;
   top: 159px;
 }
 
 .titleProfil {
-  outline: 1px solid rgb(167, 167, 21);
+ //outline: 1px solid rgb(167, 167, 21);
   font-size: 48px;
   font-weight: 500;
   display: flex;
@@ -19,6 +16,10 @@
 .nameProfil {
   color: red;
 }
+.containerGraphUser{
+  display:flex;
+  flex-wrap: wrap;
+  }
 .txtProfil{
     margin-top:41px;
     margin-bottom:77px;
@@ -53,7 +54,8 @@ background-color: #FBFBFB;
 }
 @media #{$large-down} {
   .containerProfil {
-  margin-left: 145px;
+  margin-left: 135px;
+  top: 110px;
   }
   .containerBodyMass{
     margin-top: 30px;
