fix(css) daily & profil mobile

--- a/src/components/DailyActivity/style.scss
+++ b/src/components/DailyActivity/style.scss
@@ -33,3 +33,10 @@
         text-align:center;
         align-items:center;
     }
+
+
+    @media #{$large-down} {
+        .containerDailyActivity{
+            width:770px;
+        }
+    }
