--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -1,10 +1,10 @@
 @import "../../styles/commun.scss";
 .containerAverageSession{
-    background: #FF0000;
+   background: #FF0000;
 box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 border-radius: 5px;
-width:258px ;
-height:263px;
+width:100% ;
+height:auto;
 font-size: 12px;
 //opacity: 0.6;
 }
