--- a/src/components/DailyActivity/style.scss
+++ b/src/components/DailyActivity/style.scss
@@ -4,18 +4,15 @@
     background-color: rgba(251, 251, 251, 1);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
-    width:835px;
-    height:320px;
-    }
+        }
     .containerTitleDailyActivity{
-        width:140px;
-        font-size: 15px;
+       font-size: 15px;
         line-height: 24px;
         font-weight: 500;
     }
     
     .titleDailyActivity{
-       //@include outline:2px solid green;
+       //outline:2px solid green;
         position: relative;
         top: 24px;
         left: 32px;
@@ -37,6 +34,6 @@
 
     @media #{$large-down} {
         .containerDailyActivity{
-            width:770px;
+            outline:2px solid green;
         }
     }
